--- a/index.html
+++ b/index.html
@@ -1,13 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico|Roboto:400,700&display=swap"> 
+  <link rel="stylesheet" href="Styles\style.css">
+  <link rel="stylesheet" href="Styles\normalize.css">
 
+  <title>Diego Froehlich Leal</title>
+
+</head>
 <body>
+<nav>
+  <a href="#">LOGO</a>
+  <ul>
+    <li><a href="#sobre">Sobre</a></li>
+    <li><a href="#servicos">Serviços</a></li>
+    <li><a href="#portfolio">Portfólio</a></li>
+    <li><a href="#contato">Contato</a></li>
+   
     
+  </ul>
+</nav>
+<header>
+
+  <h1> Lorem ipsum </h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel odio qui debitis cumque, est sint iure cupiditate reprehenderit dolor necessitatibus obcaecati harum fugiat. Eligendi omnis officiis distinctio et! Voluptate, sit.</p>
+  <a href="#sobre" class="botao">VER MAIS</a>
+
+</header>
+
+<section id="sobre">
+
+  <h2>Sobre</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, et? Accusamus odit esse eaque aspernatur hic, earum possimus doloremque ex obcaecati doloribus cupiditate ullam totam optio quos, dignissimos deserunt odio.</p>
+  <a href="#contato" class="botao">Entre em Contato</a>
+
+</section>
+
+<section id="servicos">
+
+  <h2>Serviços</h2>
+  <div>
+    <img src="ImagensSite\Icones\gear-1674891_640.png" alt="gear">
+    <h3>Fácil integração</h3>
+    <p>Integre seu site a qualquer gerenciador de conteudo</p>
+  </div>
+  <div>
+    <img src="ImagensSite\Icones\server-3297974_640.png" alt="server">
+    <h3>Hospedagem moderna</h3>
+    <p>Não deixe seu cliente na mão, Tenha seu site 24h no ar</p>
+  </div>
+  <div>
+    <img src="ImagensSite\Icones\web-1873373_640.png" alt="web">
+    <h3>Melhores Práticas</h3>
+    <p>Código legivel, feito com as melhores práticas, facilitando sua manutenção</p>
+  </div>
+
+</section>
+
+<section id="portfolio">
+<h2>Portfólio</h2>
+
+  <img src="ImagensSite\Imagens\computer-1209641_1920.jpg" alt="code">
+  <img src="ImagensSite\Imagens\business-1839876_1920.jpg" alt="business">
+  <img src="ImagensSite\Imagens\home-office-336378_1920.jpg" alt="home_office">
+  <img src="ImagensSite\Imagens\dollar-544956_1920.jpg" alt="dollar">
+  <img src="ImagensSite\Imagens\social-media-1795578_1920.jpg" alt="social_media">
+  <img src="ImagensSite\Imagens\search-engine-optimization-1359429_1920.jpg" alt="SEO">
+
+
+</section>
+
+<section id="contato">
+
+  <h2>Contato</h2>
+  <p>Entre em contato</p>
+  <div>
+    <img src="ImagensSite\Icones\telephone-304968_640.png" alt="phone">
+    <p><a href="48998668892"> 48-99866-8892</a></p>
+  </div>
+  <div>
+    <img src="ImagensSite\Icones\envelope-3152053_640.png" alt="mailto">
+    <p><a href="mailto:diegofrleal@gmail.com">diegofrleal@gmail.com</a></p>
+  </div>
+</section>
+
+<footer>
+  <p>Desenvolvido por Diego Froehlich Leal.</p>
+
+</footer>
+ 
 </body>
 </html>
