alteração em container contato

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 <section id="contato">
 
   <h2>Contato</h2>
-  <p>Entre em contato</p>
+  
   <div>
-    <img src="ImagensSite\Icones\telephone-304968_640.png" alt="phone">
-    <p><a href="48998668892"> 48-99866-8892</a></p>
+    <img src="ImagensSite\Icones\ic_phone_black_48dp.png" alt="phone">
+    <p><a href="tel:48998668892">48-99866-8892</a></p>
   </div>
   <div>
-    <img src="ImagensSite\Icones\envelope-3152053_640.png" alt="mailto">
-    <p><a href="mailto:diegofrleal@gmail.com">diegofrleal@gmail.com</a></p>
+    <img src="ImagensSite\Icones\ic_email_black_48dp.png" alt="mailto">
+    <p><a href="mailto:diegofrleal@gmail.com">E-Mail</a></p>
   </div>
 </section>
 
