--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico|Roboto:400,700&display=swap"> 
   <link rel="stylesheet" href="Styles\style.css">
   <link rel="stylesheet" href="Styles\normalize.css">
+  <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
 
   <title>Diego Froehlich Leal</title>
 
@@ -94,4 +95,5 @@
 </footer>
  
 </body>
+<script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
 </html>
