--- a/index.html
+++ b/index.html
@@ -1,99 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pacifico|Roboto:400,700&display=swap"> 
-  <link rel="stylesheet" href="Styles\style.css">
-  <link rel="stylesheet" href="Styles\normalize.css">
-  <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Diego Froehlich Leal</title>
+
+    <link rel="stylesheet" href="Styles\style.css">
+
+    <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
+
+    <title>Diego Froehlich Leal</title>
 
 </head>
 <body>
-<nav>
-  <a href="#">LOGO</a>
-  <ul>
-    <li><a href="#sobre">Sobre</a></li>
-    <li><a href="#servicos">Serviços</a></li>
-    <li><a href="#portfolio">Portfólio</a></li>
-    <li><a href="#contato">Contato</a></li>
-   
-    
-  </ul>
-</nav>
 <header>
-
-  <h1> Lorem ipsum </h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel odio qui debitis cumque, est sint iure cupiditate reprehenderit dolor necessitatibus obcaecati harum fugiat. Eligendi omnis officiis distinctio et! Voluptate, sit.</p>
-  <a href="#sobre" class="botao">VER MAIS</a>
-
+    <a href="#" class="logo">Podia ser <br>sua logo<br> aqui!</a>
+    <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="https://www.linkedin.com/in/diegofleal/" target="_blank">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+    </ul>
 </header>
-
-<section id="sobre">
-
-  <h2>Sobre</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, et? Accusamus odit esse eaque aspernatur hic, earum possimus doloremque ex obcaecati doloribus cupiditate ullam totam optio quos, dignissimos deserunt odio.</p>
-  <a href="#contato" class="botao">Entre em Contato</a>
-
+<section>
+    <img src="stars.png" id="stars" alt="Stars">
+    <img src="moon.png" id="moon" alt="Moon">
+    <img src="mountains_behind.png" id="mountains_behind" alt="Mountains Behind">
+    <h2 id="text">Diego Froehlich Leal</h2>
+    <a href="#sec" id="btn">Clique aqui!</a>
+    <img src="mountains_front.png" id="mountains_front" alt="Mountains Front">
 </section>
+<div class="sec" id="sec">
+    <h2>Parallax Scrolling Effects</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
+        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
+        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
+        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
+        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
+        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
+        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
+        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
+        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
+        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
+        vero?<br><br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
+        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
+        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
+        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
+        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
+        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
+        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
+        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
+        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
+        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
+        vero?<br><br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
+        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
+        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
+        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
+        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
+        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
+        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
+        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
+        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
+        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
+        vero?<br><br>
+    </p>
+</div>
+<script>
+    let stars = document.getElementById('stars')
+    let moon = document.getElementById('moon')
+    let mountains_behind = document.getElementById('mountains_behind')
+    let text = document.getElementById('text')
+    let btn = document.getElementById('btn')
+    let mountains_front = document.getElementById('mountains_front')
+    let header = document.getElementById('header')
 
-<section id="servicos">
-
-  <h2>Serviços</h2>
-  <div>
-    <img src="ImagensSite\Icones\gear-1674891_640.png" alt="gear">
-    <h3>Fácil integração</h3>
-    <p>Integre seu site a qualquer gerenciador de conteudo</p>
-  </div>
-  <div>
-    <img src="ImagensSite\Icones\server-3297974_640.png" alt="server">
-    <h3>Hospedagem moderna</h3>
-    <p>Não deixe seu cliente na mão, Tenha seu site 24h no ar</p>
-  </div>
-  <div>
-    <img src="ImagensSite\Icones\web-1873373_640.png" alt="web">
-    <h3>Melhores Práticas</h3>
-    <p>Código legivel, feito com as melhores práticas, facilitando sua manutenção</p>
-  </div>
-
-</section>
-
-<section id="portfolio">
-<h2>Portfólio</h2>
-
-  <img src="ImagensSite\Imagens\computer-1209641_1920.jpg" alt="code">
-  <img src="ImagensSite\Imagens\business-1839876_1920.jpg" alt="business">
-  <img src="ImagensSite\Imagens\home-office-336378_1920.jpg" alt="home_office">
-  <img src="ImagensSite\Imagens\dollar-544956_1920.jpg" alt="dollar">
-  <img src="ImagensSite\Imagens\social-media-1795578_1920.jpg" alt="social_media">
-  <img src="ImagensSite\Imagens\search-engine-optimization-1359429_1920.jpg" alt="SEO">
-
-
-</section>
-
-<section id="contato">
-
-  <h2>Contato</h2>
-  
-  <div>
-    <img src="ImagensSite\Icones\ic_phone_black_48dp.png" alt="phone">
-    <p><a href="tel:48998668892">48-99866-8892</a></p>
-  </div>
-  <div>
-    <img src="ImagensSite\Icones\ic_email_black_48dp.png" alt="mailto">
-    <p><a href="mailto:diegofrleal@gmail.com">E-Mail</a></p>
-  </div>
-</section>
-
-<footer>
-  <p>Desenvolvido por Diego Froehlich Leal.</p>
-
-</footer>
- 
+    window.addEventListener('scroll', function () {
+        let value = window.scrollY;
+        stars.style.left = value * 0.25 + 'px';
+        moon.style.top = value * 1.05 + 'px';
+        mountains_behind.style.top = value * 0.5 + 'px';
+        mountains_front.style.top = value * 0 + 'px';
+        text.style.marginRight = value * 4 + 'px';
+        text.style.marginTop = value * 1.5 + 'px';
+        btn.style.marginTop = value * 1.5 + 'px';
+        header.style.top = value * 0.5 + 'px';
+    })
+</script>
 </body>
 <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
 </html>
