--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-    <link rel="stylesheet" href="Styles\style.css">
+    <link rel="stylesheet" href="Styles/style.css">
 
     <script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
 
