correção no header

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     let text = document.getElementById('text')
     let btn = document.getElementById('btn')
     let mountains_front = document.getElementById('mountains_front')
-    let header = document.getElementById('header')
+    let header = document.querySelector('header');
 
     window.addEventListener('scroll', function () {
         let value = window.scrollY;
