--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="Styles/style.css">
 
-   <title>Diego Froehlich Leal</title>
+    <title>Diego Froehlich Leal</title>
 
 </head>
 <body>
@@ -29,12 +29,17 @@
     <img src="mountains_front.png" id="mountains_front" alt="Mountains Front">
 </section>
 <div class="sec" id="sec">
-    <h2>Oi! Me chamo Diego</h2>
-    <p> Este site mostra um pouquinho de Parallax, no css puro, aprendi um dia desses ai, achei divertido e resolvi fazer igual, a proposito, Parallax é a diferença na posição de objetos vistos em diferentes faixas de visão, medido pelo ângulo de inclinação entre as faixas. Com isso, objetos próximos têm uma maior Parallax que objetos mais distantes, quando observado de posições diferentes. Dessa forma, podemos dizer que o Parallax é o que nos dá a noção de profundidade em nosso campo de visão. 
-        <br>O texto abaixo é só para aumentar o scroll da pagina mesmo =)
-        
-        
-        <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
+    <h2>Oi! Me chamo Diego, tudo bom?</h2>
+    <p> <br>Este site mostra um pouquinho de Parallax, no css puro mesmo, aprendi um dia desses aí, achei divertido e resolvi
+        fazer igual, a proposito, Parallax é a diferença na posição de objetos vistos em diferentes faixas de visão,
+        medido pelo ângulo de inclinação entre as faixas. Com isso, objetos próximos têm uma maior Parallax que objetos
+        mais distantes, quando observado de posições diferentes. Dessa forma, podemos dizer que o Parallax é o que nos
+        dá a noção de profundidade em nosso campo de visão.
+        <br>O texto abaixo é só para aumentar o scroll da página mesmo =)
+
+
+        <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam
+        odit quo
         sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
         quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
         nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
