Atualiza o idioma da página para pt-br e remove texto desnecessário

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,41 +37,6 @@
         dá a noção de profundidade em nosso campo de visão.
         <br>O texto abaixo é só para aumentar o scroll da página mesmo =)
 
-
-        <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam
-        odit quo
-        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
-        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
-        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
-        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
-        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
-        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
-        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
-        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
-        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
-        vero?<br><br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
-        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
-        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
-        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
-        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
-        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
-        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
-        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
-        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
-        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
-        vero?<br><br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab consequuntur cupiditate earum itaque nam odit quo
-        sed. Ducimus earum et illo nesciunt non odio officiis optio sequi soluta unde! Accusamus, amet corporis ipsam
-        quisquam soluta voluptates? Ab assumenda atque beatae delectus dolore enim eum illum in laudantium, libero nobis
-        nulla officia perspiciatis praesentium quasi quo similique sit totam voluptatem!Dicta dolorem doloremque error
-        illum obcaecati placeat praesentium quidem sapiente. Aliquam dolorum error eum exercitationem explicabo ipsa
-        maiores quae quas quia, quis quod tempora? Aliquid deserunt est laborum quam vel. Atque commodi consectetur
-        dolorem et maiores porro quas quasi quos repudiandae. Alias aliquam aspernatur assumenda deserunt doloremque
-        eligendi eos error explicabo, fugit iure perspiciatis porro quibusdam quidem sequi sint voluptatem. Ad aperiam
-        culpa cum deleniti distinctio dolorum, explicabo, fuga incidunt molestias nisi obcaecati, pariatur placeat
-        praesentium qui quis rerum temporibus! Accusantium amet dolore doloremque, id nulla quidem rem temporibus
-        vero?<br><br>
     </p>
 </div>
 <script>
@@ -96,5 +61,5 @@
     })
 </script>
 </body>
-<script async src="https://s.widgetwhats.com/wwwa.js" data-wwwa="13268"></script>
+
 </html>
