arrumando o texto, informado que ainda esta em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
             mais distantes, quando observado de posições diferentes. Dessa forma, podemos dizer que o Parallax é o que
             nos
             dá a noção de profundidade em nosso campo de visão.
-            <br>O texto abaixo é só para aumentar o scroll da página mesmo =)
+            <br>
+            <br>
+            <br>
+            Site ainda em construção, mas já está ficando legalzinho, não acha?
+                        <br>
+                        <br>
+                        <br><br>
+                        <br>
+                        <br><br>
+                        <br>
+                        <br><br>
+                        <br>
+                        <br><br>
+                        <br>
+                        <br>
 
         </p>
     </div>
